[package]
name = "datanftmint"
version = "0.0.0"
edition = "2021"
publish = false
authors = [ "Damian Ovidu - Itheum"]

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.38.0"

[dependencies.elrond-wasm-modules]
version = "0.38.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.38.0"
