[package]
name = "datanftmint"
version = "1.0.0"
edition = "2021"
publish = false
authors = [ "Ovidiu Damian - Itheum","Bucur David - Itheum","Mark Paul - Itheum"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.39.7"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.7"
