[package]
name = "datanftmint"
version = "3.0.0"
edition = "2021"
publish = false
authors = [ "Ovidiu Damian - Itheum","Bucur David - Itheum","Mark Paul - Itheum"]

[lib]
path = "src/lib.rs"
[dependencies.multiversx-sc]
version = "0.47.4"
[dev-dependencies.multiversx-sc-scenario]
version = "0.47.4"


[dev-dependencies]
core-mx-life-bonding-sc = {git = "https://github.com/Itheum/core-mx-life-bonding-sc"}
