[package]
name = "datanftmint-meta"
version = "2.0.0"
edition = "2021"
publish = false
authors = [ "Ovidiu Damian - Itheum","Bucur David - Itheum","Mark Paul - Itheum"]

[dev-dependencies]
[dependencies.datanftmint]
path = ".."

[dependencies.multiversx-sc]
version = "0.45.1"

[dependencies.multiversx-sc-meta]
version = "0.45.1"
