[package]
name = "datanftmint-wasm"
version = "0.0.0"
edition = "2021"
publish = false
authors = [ "Damian Ovidu - Itheum"]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.datanftmint]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.36.1"

[dependencies.elrond-wasm-output]
version = "0.36.1"
features = [ "wasm-output-mode",]
